web-infras/parser/tests/fixtures/babel/core/uncategorised/486/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,43)
1|function hello() {'use strict'; (function eval() { }()) }
 |                                         ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,43)
1|function hello() {'use strict'; (function eval() { }()) }
 |                                         ^
[SyntaxError]: unexpect keyword in strict mode (1,43)
1|function hello() {'use strict'; (function eval() { }()) }
 |                                         ^
